# open-chat

./: .gitignore  README.md
src/: alembic.ini  main.py  pyproject.toml
src/api/: router.py
src/api/v1/: message.py  user.py
src/core/: config.py  exceptions.py
src/db/: session.py
src/db/migrations/versions/: 2024_09_13_1157-e06a5f4218f5_init.py
src/db/models/: __init__.py  base.py  message.py  mixins.py  user.py
src/db/repository/: message.py  user.py
src/schemas/: base.py  message.py  mixins.py  user.py
src/services/: message.py  user.py
src/utils/: auth.py
