[tool.poetry]
name = "open-chat"
version = "0.1.0"
description = ""
authors = ["reek8 <reek867@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.2"}
alembic = "^1.13.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
